<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        app:layout_constraintWidth_percent="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/hangman"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/start_game"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="startGameClicked"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/about_button"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/about"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="aboutClicked"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="@+id/start_game_button"
        app:layout_constraintStart_toStartOf="@+id/start_game_button"
        app:layout_constraintTop_toBottomOf="@+id/start_game_button" />

</androidx.constraintlayout.widget.ConstraintLayout>